--- a/05-services/dobby-svc-nodeport.yaml
+++ b/05-services/dobby-svc-nodeport.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-      app: dobby-pod
+      app: dobby-pod-rs
   ports:
   - protocol: TCP
     port: 4444
